--- a/config/user-service-dev.yml
+++ b/config/user-service-dev.yml
@@ -15,3 +15,9 @@ eureka:
     service-url:
       defaultZone: http://eureka1:2001/eureka, http://eureka2:2002/eureka
 
+#通过配置管理中心刷新自定义配置信息
+management:
+  endpoints:
+    web:
+      exposure:
+        include: refresh
